--- a/styles.css
+++ b/styles.css
@@ -13,46 +13,244 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+/*this is a comment*/
 
-
-.demo-ribbon {
-  width: 100%;
-  height: 40vh;
-  background-color: #3F51B5;
-  -webkit-flex-shrink: 0;
-      -ms-flex-negative: 0;
-          flex-shrink: 0;
+header{
+position:static;
+background-color: black;
+max-width:1920px;
+box-shadow: 0 2px 4px rgba(0,0,0,0.5);
+height:80px;
 }
 
-.demo-main {
-  margin-top: -35vh;
-  -webkit-flex-shrink: 0;
-      -ms-flex-negative: 0;
-          flex-shrink: 0;
+body {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    overflow-x: hidden;
+    background-attachment: scroll;
+    background-color: rgb(144, 144, 144);
+    background-position: 0% 0%;
+    background-repeat: repeat;
+
 }
 
-.demo-header .mdl-layout__header-row {
-  padding-left: 40px;
+
+main {
+	position: relative;
+    margin: 0px auto;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    top: 0px;
+    background-color: rgb(255, 255, 255);
+	font-family: "myfont";
 }
 
-.demo-container {
-  max-width: 1600px;
-  width: calc(100% - 16px);
-  margin: 0 auto;
+.centermenu{
+margin-right: auto;
+margin-left: auto;	
+max-width:100%;
 }
 
-.demo-content {
-  border-radius: 2px;
-  padding: 80px 56px;
-  margin-bottom: 80px;
+
+
+a:visited {
+    color: red;
 }
 
-.demo-layout.is-small-screen .demo-content {
-  padding: 40px 28px;
+a:link {
+    color: pink;
 }
 
-.demo-content h3 {
-  margin-top: 48px;
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+	font-size:26px
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 18px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111111;
+}
+
+.menuitems:hover{
+border-bottom: 2px solid #1fbba6;	
+}
+
+#Honda15{
+	position:relative;
+margin-left:2%;
+margin-top:2%;	
+border: 3px solid black;
+width:906px; 
+height:551px	
+}
+
+#Phototext{
+margin-left:2%;	
+width:50%;	
+}
+
+/*li.menuitems{
+display:none;	
+}*/
+
+#menubtn{
+	width:40px;
+	height:40px;
+	visibility:hidden;
+	background-image:url("Menubtn.jpg");
+	z-index:1;
+	margin:1%;
+	font-size: 3.7em;
+    position: absolute;
+}
+
+#MobileMenuPortrait{
+	
+}
+
+#TilePosition{
+margin-right: auto;
+margin-left: auto;	
+width:50%;	
+}
+
+#box{
+	margin-bottom: 1%;
+    width: 850px;
+    height: 110px;
+    overflow: hidden;
+    border: 3px solid black;	
+}
+
+.MotoImg{
+float:left;
+border: 1px solid black;
+margin: 1px;	
+}
+
+#Infobox{
+    background-color: #F0E2E0 ;
+    border: 5px solid black;
+    border-radius: 4px;
+    font-size: 18px;
+    line-height: 19px;
+    margin-top: 20px;
+    margin-left: 10%;
+	margin-bottom: 2%;
+    padding: 5px 2%;
+    width: 1010px;
+    height: 820px;	
+}
+
+.lextabs{
+	background-color: rgb(223, 6, 38);
+	list-style: none;
+    float: left;
+    position: relative;
+    top: 0;
+	    border: 1px solid black;
+    margin: 1px .2em 0 0;
+    padding: 11px;
+    white-space: nowrap;	
+}
+
+ul.MotoInfo{
+margin-right: auto;
+margin-left: auto;	
+max-width:13%;	
+margin-bottom:5%;
+}
+
+.modeldesc {
+    float: right;
+    margin-left: auto;
+    margin-right: 28%;
+    font-size: 0.9em;
+    position: relative;
+    display: inline;
+    width: 445px;
+    height: 40%;
+    background-color: #F3F3F3;
+    border: 1px solid #696969;
+}
+
+.OfferInfo{
+	
+}
+
+#PicM{
+    margin-left: 30%;
+    max-width: 40%;
+margin-bottom:5%;
+}
+
+#compass{
+    border: 2px solid red;
+    width: 50px;
+    border-radius: 20%;
+	margin: 1%;
+}
+
+.Stores{
+    text-align: center;
+    width: 15%;
+    margin-left: 2%;
+    margin-top: 2%;
+    background-color: #FFA07A;
+	padding:1%;
+    border-radius: 4%;
+    font-size: inherit;
+}
+
+#map {
+	border:1px solid black;
+    width: 500px;
+    height: 350px;
+	margin-left:2%;
+    margin-top: 3%;
+    z-index: 0;
+}
+
+#formBox{
+	background-color: grey;
+    border: 1px solid black;
+	margin-top:2%;
+    border-radius: 4px;
+	 padding: 1%;
+    width: 300px;
+	height:500px;
+    margin-left: auto;	
+	margin-right:auto;
+}
+
+#zero{
+width:100%;
+height:20px;	
+}
+
+#Mmenu{
+display:none;	
 }
 
 .demo-footer {
