--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@
  */
 /*this is a comment*/
 
+/*this is a comment*/
+
 header{
 position:static;
 background-color: black;
@@ -135,7 +137,7 @@ margin-left: auto;
 width:50%;	
 }
 
-#box{
+.box{
 	margin-bottom: 1%;
     width: 850px;
     height: 110px;
@@ -251,12 +253,4 @@ height:20px;
 
 #Mmenu{
 display:none;	
-}
-
-.demo-footer {
-  padding-left: 40px;
-}
-
-.demo-footer .mdl-mini-footer--link-list a {
-  font-size: 13px;
 }
