--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@
 
 /*this is a comment*/
 
+/*Index Page Start*/
+
 header{
 position:static;
 background-color: black;
@@ -112,9 +114,7 @@ margin-left:2%;
 width:50%;	
 }
 
-/*li.menuitems{
-display:none;	
-}*/
+
 
 #menubtn{
 	width:40px;
@@ -126,11 +126,9 @@ display:none;
 	font-size: 3.7em;
     position: absolute;
 }
+/*Index Page End*/
 
-#MobileMenuPortrait{
-	
-}
-
+/*Blog Page Start*/
 #TilePosition{
 margin-right: auto;
 margin-left: auto;	
@@ -138,7 +136,7 @@ width:50%;
 }
 
 .box{
-    margin-bottom: 1%;
+	margin-bottom: 1%;
     width: 850px;
     height: 110px;
     overflow: hidden;
@@ -151,6 +149,9 @@ border: 1px solid black;
 margin: 1px;	
 }
 
+/*Blog Page End*/
+
+/*LexMoto Page Start*/
 #Infobox{
     background-color: #F0E2E0 ;
     border: 5px solid black;
@@ -197,10 +198,23 @@ margin-bottom:5%;
     border: 1px solid #696969;
 }
 
-.OfferInfo{
-	
-}
+/*LexMoto Page End*/
 
+/*E-mag Page Start*/
+#formBox{
+	background-color: grey;
+    border: 1px solid black;
+	margin-top:2%;
+    border-radius: 4px;
+	 padding: 1%;
+    width: 300px;
+	height:500px;
+    margin-left: auto;	
+	margin-right:auto;
+}
+/*E-mag Page End*/
+
+/* Storelocate Page*/
 #PicM{
     margin-left: 30%;
     max-width: 40%;
@@ -234,18 +248,6 @@ margin-bottom:5%;
     z-index: 0;
 }
 
-#formBox{
-	background-color: grey;
-    border: 1px solid black;
-	margin-top:2%;
-    border-radius: 4px;
-	 padding: 1%;
-    width: 300px;
-	height:500px;
-    margin-left: auto;	
-	margin-right:auto;
-}
-
 #zero{
 width:100%;
 height:20px;	
@@ -254,3 +256,4 @@ height:20px;
 #Mmenu{
 display:none;	
 }
+/* Storelocate Page End*/
