--- a/mobile.css
+++ b/mobile.css
@@ -145,6 +145,7 @@ font-size: 7em;
     margin-bottom: 3%;
     height: 678px;
     width: 900px;
+	margin-left: 0%; 
 }
 
 .Details{
@@ -161,6 +162,35 @@ margin-left:10%;
 
 #phoneno{
     margin-left: 3%;	
+}
+
+#Infobox {
+    font-size: 18px;
+    line-height: 54px;
+    margin-top: 20px;
+    margin-left: 2%;
+    padding: 5px 2%;
+    width: 92%;
+    height: 156%;
+}
+
+ul.MotoInfo {
+    max-width: 60%;
+    zoom: 4.0;
+}
+
+#PicM {
+    max-width: 100%;
+    margin-bottom: 3%;
+    height: 678px;
+    width: 900px;
+}
+
+.modeldesc {
+    font-size: 3.9em;
+    height: 1772px;
+	width: 860px;
+	margin-right: 2%;
 }
 
 .NewsletterStyle{
@@ -561,9 +591,9 @@ width:645px;
 ul.MotoInfo {
     margin-right: auto;
     margin-left: auto;
-    max-width: 28%;
+    max-width: 42%;
     margin-bottom: 5%;
-    zoom: 2;
+    zoom: 3;
 }
 
 #PicM {
@@ -573,30 +603,25 @@ ul.MotoInfo {
 }
 
 #Infobox {
-    background-color: #F0E2E0;
-    border: 5px solid black;
-    border-radius: 4px;
     font-size: 18px;
-    line-height: 30px;
+    line-height: 41px;
     margin-top: 20px;
     margin-left: 1%;
     margin-bottom: 2%;
     padding: 5px 2%;
     width: 910px;
-    height: 1490px;
+    height: 1820px;
 }
 
 .modeldesc {
     float: right;
     margin-left: auto;
     margin-right: 0%;
-    font-size: 1.9em;
+    font-size: 2.8em;
     position: relative;
     display: inline;
     width: 905px;
-    height: 600px;
-    background-color: #F3F3F3;
-    border: 1px solid #696969;
+    height: 1050px;
 }
 
 #formBox {
@@ -626,24 +651,6 @@ ul.MotoInfo {
 #MapContent{
 margin-top: 5%;	
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
