--- a/mobile.css
+++ b/mobile.css
@@ -430,6 +430,24 @@ font-size:2.5em
     zoom: 2.0;
 }
 
+.MH1Text {
+    font-size: 7em;
+}
+	
+#BLTitle{
+font-size:3em;
+}
+
+#PMText {
+    font-size: 3em;
+}
+
+#Blogbtn{
+zoom: 6;
+margin-right: 30%;
+margin-left: 30%;
+margin-bottom: 2%;	
+}
 
 .MotoImg {
     padding: 1%;
@@ -510,7 +528,15 @@ ul.MotoInfo {
     width: 60%;
     height: 500px;
     zoom: 2.1;
-}	
+}
+	
+#compass {
+    border: 2px solid red;
+    width: 100px;
+    height: 100px;
+    border-radius: 20%;
+    margin: 1%;
+}
 	
 .Stores {
     text-align: center;
@@ -581,13 +607,23 @@ display:none;
 }
 
 .MH1Text {
-    font-size: 4em;
+    font-size: 7em;
+}
+	
+#BLTitle{
+font-size:3em;
 }
 
-.PMText {
+#PMText {
     font-size: 3em;
 }
 
+#Blogbtn{
+zoom: 6;
+margin-right: 30%;
+margin-left: 30%;
+margin-bottom: 2%;	
+}
 
 .box {
     font-size: 2em;
@@ -668,8 +704,8 @@ ul.MotoInfo {
 #compass{
     border: 2px solid red;
     border-radius: 20%;
-    width:100px;
-	height:100px;	
+    width:150px;
+    height:150px;	
 }
 
 .Stores {
